--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                             <h4>📊 Laporan Keuangan Dasar</h4>
                             <div class="report-cards-container">
                                 <!-- 1. Saldo Awal / Modal -->
-                                <div class="report-card income">
+                                <div class="report-card modal">
                                     <div class="report-card-icon">
                                         <i class="bi bi-wallet2"></i>
                                     </div>
@@ -478,19 +478,8 @@
                                 </div>
                             </div>
                             
-                            <h4>Distribusi & Transaksi Terbesar</h4>
+                            <h4>Transaksi Terbesar</h4>
                             <div class="report-cards-container">
-                                <!-- 5. Distribusi Metode -->
-                                <div class="report-card distribution">
-                                    <div class="report-card-icon">
-                                        <i class="bi bi-pie-chart"></i>
-                                    </div>
-                                    <div class="report-card-content">
-                                        <h4>Distribusi Metode</h4>
-                                        <span class="report-card-value">💵 Tunai: Rp 3.192.000</span>
-                                        <span class="report-card-value">💳 Non Tunai: Rp 3.459.441</span>
-                                    </div>
-                                </div>
                                 
                                 <!-- 6. Pengeluaran Terbesar -->
                                 <div class="report-card top-expense">
