--- a/index.html
+++ b/index.html
@@ -610,10 +610,10 @@
                                     </div>
                                 </div>
                                 
-                                <div class="chart-card" id="bar-chart-container">
-                                    <h4>Tren Transaksi</h4>
+                                <div class="chart-card" id="top-income-container">
+                                    <h4>Top Pemasukan Harian</h4>
                                     <div class="chart-wrapper">
-                                        <canvas id="bar-chart"></canvas>
+                                        <canvas id="top-income-bar-chart"></canvas>
                                     </div>
                                 </div>
                             </div>
