--- a/v2/index.html
+++ b/v2/index.html
@@ -132,9 +132,6 @@
                     <i class="bi bi-list"></i>
                 </button>
                 <h2 id="page-title">Dashboard</h2>
-                <button id="add-transaction-btn" class="btn-primary add-transaction-btn">
-                    <i class="bi bi-plus-circle" alt="Transaksi Baru"></i>
-                </button>
                 <div class="user-profile">
                     <img id="user-avatar" src="" alt="Avatar" class="avatar">
                     <span id="user-name"></span>
@@ -741,11 +738,24 @@
                 <i class="bi bi-wallet2"></i>
                 <span>Transaksi</span>
             </a>
+            <a href="#" class="nav-item" id="add-transaction-btn">
+                <i class="bi bi-plus-circle"></i>
+                <span>Tambah</span>
+            </a>
             <a href="#reports" class="nav-item" data-page="reports">
                 <i class="bi bi-bar-chart"></i>
                 <span>Laporan</span>
             </a>
+            <button id="logout-btn-mobile" class="nav-item">
+                <i class="bi bi-box-arrow-right"></i>
+                <span>Logout</span>
+            </button>
         </nav>
+
+        <!-- Floating Add Transaction Button for Desktop -->
+        <button class="add-transaction-btn" id="floating-add-transaction-btn">
+            <i class="bi bi-plus-circle"></i>
+        </button>
     </div>
 
     <!-- Loading Overlay -->
