--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <!-- Chart.js untuk visualisasi grafik -->
@@ -131,9 +132,6 @@
                     <i class="bi bi-list"></i>
                 </button>
                 <h2 id="page-title">Dashboard</h2>
-                <button id="add-transaction-btn" class="btn-primary add-transaction-btn">
-                    <i class="bi bi-plus-circle" alt="Transaksi Baru"></i>
-                </button>
                 <div class="user-profile">
                     <img id="user-avatar" src="" alt="Avatar" class="avatar">
                     <span id="user-name"></span>
@@ -290,20 +288,36 @@
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group">
-                                        <label for="type">Jenis</label>
-                                        <select id="type" name="type" required>
-                                            <option value="">Pilih Jenis</option>
-                                            <option value="Pemasukan">Pemasukan</option>
-                                            <option value="Pengeluaran">Pengeluaran</option>
-                                        </select>
+                                        <label for="type"><i class="bi bi-tags"></i> Jenis</label>
+                                        <div class="option-buttons">
+                                            <button type="button" class="option-btn" data-value="Pemasukan"
+                                                data-field="type">
+                                                <i class="bi bi-arrow-up-circle"></i>
+                                                <span>Pemasukan</span>
+                                            </button>
+                                            <button type="button" class="option-btn" data-value="Pengeluaran"
+                                                data-field="type">
+                                                <i class="bi bi-arrow-down-circle"></i>
+                                                <span>Pengeluaran</span>
+                                            </button>
+                                        </div>
+                                        <input type="hidden" id="type" name="type" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="method">Metode</label>
-                                        <select id="method" name="method" required>
-                                            <option value="">Pilih Metode</option>
-                                            <option value="Tunai">Tunai</option>
-                                            <option value="Non Tunai">Non Tunai</option>
-                                        </select>
+                                        <label for="method"><i class="bi bi-credit-card"></i> Metode</label>
+                                        <div class="option-buttons">
+                                            <button type="button" class="option-btn" data-value="Tunai"
+                                                data-field="method">
+                                                <i class="bi bi-cash-coin"></i>
+                                                <span>Tunai</span>
+                                            </button>
+                                            <button type="button" class="option-btn" data-value="Non Tunai"
+                                                data-field="method">
+                                                <i class="bi bi-credit-card"></i>
+                                                <span>Non Tunai</span>
+                                            </button>
+                                        </div>
+                                        <input type="hidden" id="method" name="method" required>
                                     </div>
                                 </div>
                                 <div class="form-row">
@@ -724,11 +738,24 @@
                 <i class="bi bi-wallet2"></i>
                 <span>Transaksi</span>
             </a>
+            <a href="#" class="nav-item" id="add-transaction-btn">
+                <i class="bi bi-plus-circle"></i>
+                <span>Tambah</span>
+            </a>
             <a href="#reports" class="nav-item" data-page="reports">
                 <i class="bi bi-bar-chart"></i>
                 <span>Laporan</span>
             </a>
+            <button id="logout-btn-mobile" class="nav-item">
+                <i class="bi bi-box-arrow-right"></i>
+                <span>Logout</span>
+            </button>
         </nav>
+
+        <!-- Floating Add Transaction Button for Desktop -->
+        <button class="add-transaction-btn" id="floating-add-transaction-btn">
+            <i class="bi bi-plus-circle"></i>
+        </button>
     </div>
 
     <!-- Loading Overlay -->
@@ -747,53 +774,137 @@
     <div id="transaction-modal" class="modal-container hidden">
         <div class="modal">
             <div class="modal-header">
-                <h3>Tambah Transaksi Cepat</h3>
+                <h3><i class="bi bi-plus-circle-fill"></i> Tambah Transaksi</h3>
                 <button id="close-transaction-modal" class="close-modal">&times;</button>
             </div>
-            <form id="quick-transaction-form">
-                <div class="form-container">
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="quick-date">Tanggal</label>
-                            <input type="date" id="quick-date" name="quick-date" required>
+            <div class="modal-body">
+                <form id="quick-transaction-form">
+                    <div class="form-container">
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="quick-date"><i class="bi bi-calendar"></i> Tanggal</label>
+                                <input type="date" id="quick-date" name="quick-date" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="quick-description"><i class="bi bi-pencil"></i> Deskripsi</label>
+                                <input type="text" id="quick-description" name="quick-description"
+                                    placeholder="Masukkan deskripsi" required>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="quick-description">Deskripsi</label>
-                            <input type="text" id="quick-description" name="quick-description"
-                                placeholder="Masukkan deskripsi" required>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="quick-type"><i class="bi bi-tags"></i> Jenis</label>
+                                <div class="option-buttons">
+                                    <button type="button" class="option-btn" data-value="Pemasukan"
+                                        data-field="quick-type">
+                                        <span>Pemasukan</span>
+                                    </button>
+                                    <button type="button" class="option-btn" data-value="Pengeluaran"
+                                        data-field="quick-type">
+                                        <span>Pengeluaran</span>
+                                    </button>
+                                </div>
+                                <input type="hidden" id="quick-type" name="quick-type" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="quick-method"><i class="bi bi-credit-card"></i> Metode</label>
+                                <div class="option-buttons">
+                                    <button type="button" class="option-btn" data-value="Tunai"
+                                        data-field="quick-method">
+                                        <span>Tunai</span>
+                                    </button>
+                                    <button type="button" class="option-btn" data-value="Non Tunai"
+                                        data-field="quick-method">
+                                        <span>Non Tunai</span>
+                                    </button>
+                                </div>
+                                <input type="hidden" id="quick-method" name="quick-method" required>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="quick-amount"><i class="bi bi-cash"></i> Nominal (Rp)</label>
+                                <input type="number" id="quick-amount" name="amount" placeholder="0" min="0" required>
+                            </div>
                         </div>
                     </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="quick-type">Jenis</label>
-                            <select id="quick-type" name="quick-type" required>
-                                <option value="">Pilih Jenis</option>
-                                <option value="Pemasukan">Pemasukan</option>
-                                <option value="Pengeluaran">Pengeluaran</option>
-                            </select>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="close-transaction-modal" class="btn-secondary">Batal</button>
+                <button type="submit" form="quick-transaction-form" class="btn-primary">
+                    <i class="bi bi-plus-circle"></i> Tambah Transaksi
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Edit Transaction Modal -->
+    <div id="edit-transaction-modal" class="modal-container hidden">
+        <div class="modal">
+            <div class="modal-header">
+                <h3><i class="bi bi-pencil-fill"></i> Edit Transaksi</h3>
+                <button id="close-edit-transaction-modal" class="close-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="edit-transaction-form">
+                    <div class="form-container">
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="edit-date"><i class="bi bi-calendar"></i> Tanggal</label>
+                                <input type="date" id="edit-date" name="date" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="edit-description"><i class="bi bi-pencil"></i> Deskripsi</label>
+                                <input type="text" id="edit-description" name="description"
+                                    placeholder="Masukkan deskripsi" required>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="quick-method">Metode</label>
-                            <select id="quick-method" name="quick-method" required>
-                                <option value="">Pilih Metode</option>
-                                <option value="Tunai">Tunai</option>
-                                <option value="Non Tunai">Non Tunai</option>
-                            </select>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="edit-type"><i class="bi bi-tags"></i> Jenis</label>
+                                <div class="option-buttons">
+                                    <button type="button" class="option-btn" data-value="Pemasukan"
+                                        data-field="edit-type">
+                                        <span>Pemasukan</span>
+                                    </button>
+                                    <button type="button" class="option-btn" data-value="Pengeluaran"
+                                        data-field="edit-type">
+                                        <span>Pengeluaran</span>
+                                    </button>
+                                </div>
+                                <input type="hidden" id="edit-type" name="type" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="edit-method"><i class="bi bi-credit-card"></i> Metode</label>
+                                <div class="option-buttons">
+                                    <button type="button" class="option-btn" data-value="Tunai"
+                                        data-field="edit-method">
+                                        <span>Tunai</span>
+                                    </button>
+                                    <button type="button" class="option-btn" data-value="Non Tunai"
+                                        data-field="edit-method">
+                                        <span>Non Tunai</span>
+                                    </button>
+                                </div>
+                                <input type="hidden" id="edit-method" name="method" required>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="edit-amount"><i class="bi bi-cash"></i> Nominal (Rp)</label>
+                                <input type="number" id="edit-amount" name="amount" placeholder="0" min="0" required>
+                            </div>
                         </div>
                     </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="quick-amount">Nominal (Rp)</label>
-                            <input type="number" id="quick-amount" name="amount" placeholder="0" min="0" required>
-                        </div>
-                        <div class="form-group form-actions">
-                            <button type="submit" class="btn-primary">
-                                <i class="bi bi-plus-circle"></i> Tambah Transaksi
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </form>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="cancel-edit-transaction" class="btn-secondary">Batal</button>
+                <button type="submit" form="edit-transaction-form" class="btn-primary">
+                    <i class="bi bi-save"></i> Simpan Perubahan
+                </button>
+            </div>
         </div>
     </div>
 
