--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <!-- <svg class="login-logo" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
             <path d="M44 4H30.6666V17.3334H17.3334V30.6666H4V44H44V4Z" fill="currentColor"></path>
             </svg> -->
-                    <h1 class="login-title">Kedai Nongki</h1>
+                    <h1 class="login-title">KAS - Kedai Nongki</h1>
                 </div>
             </header>
 
@@ -96,7 +96,7 @@
                     <!-- <svg class="login-logo" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                     <path d="M44 4H30.6666V17.3334H17.3334V30.6666H4V44H44V4Z" fill="currentColor"></path>
                     </svg> -->
-                    <h1 class="login-title">Kedai Nongki</h1>
+                    <h1 class="login-title">KAS Kedai Nongki</h1>
                 </div>
 
 
@@ -128,13 +128,15 @@
         <main class="main-content">
             <!-- Header -->
             <header class="header">
-                <button id="sidebar-toggle" class="sidebar-toggle">
-                    <i class="bi bi-list"></i>
-                </button>
                 <h2 id="page-title">Dashboard</h2>
                 <div class="user-profile">
-                    <img id="user-avatar" src="" alt="Avatar" class="avatar">
                     <span id="user-name"></span>
+                    <div class="theme-toggle">
+                        <input type="checkbox" id="theme-switch" class="theme-switch-checkbox">
+                        <label for="theme-switch" class="theme-switch-label">
+                            <span class="theme-switch-slider"></span>
+                        </label>
+                    </div>
                 </div>
             </header>
 
